# kbqa

./: .env.example  .gitignore  CONTEXT.md  README.md  improve_plan.md  pyproject.toml  requirements.txt
ai-engine/: .gitignore  config.py
ai_engine/: config.py
backend/: .env.example  Dockerfile  requirements.txt
docs/: 01_OVERVIEW.md  01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  02_SYSTEM_ARCHITECTURE.md  03_API_REFERENCE.md  03_DATA_PIPELINE_AND_SCHEMA.md  04_AI_MODELS_STRATEGY.md  04_SETUP.md  05_AI_ENGINE.md  05_API_SYSTEM_DESIGN.md  06_CLIENT_UI_UX_ARCHITECTURE.md  06_FRONTEND.md  07_AGENTIC_AI_DESIGN.md  07_DATA_PIPELINE.md  07_TASK_ASSIGNMENTS.md  08_CLEAN_ARCHITECTURE.md  08_CONTINUAL_LEARNING_AND_MONITORING.md  08_SPRINT_PLANNING.md  09_ETHICS_AND_RESPONSIBLE_AI.md  10_PROJECT_MANAGEMENT.md  11_DEVELOPMENT_INFRASTRUCTURE.md  12_GIT_WORKFLOW_AND_RULES.md  13_GRAPH_SCHEMA_DESIGN.md  14_THREE_PERSON_DELIVERY_PLAN.md  15_SPRINT1_ARCHITECTURE_FOUNDATION.md  16_UNIFIED_PRODUCT_UPGRADE_PLAN.md  implement_plan.md  seminar_script.md  seminar_slides.tex
etl/: requirements.txt
eval/: benchmark_results_20260604_200917.md
frontend/: .env.example  index.html  package-lock.json  package.json
notebooks/: KAGGLE_GUIDE.md  eval_baseline_cypher.ipynb  eval_hybrid_pipeline.ipynb  eval_lightrag_naive.ipynb  ingest_lightrag_graph.ipynb  ingest_qdrant.ipynb  kaggle_benchmark.ipynb  kaggle_eval_1_baseline.ipynb  kaggle_eval_2_lightrag_naive.ipynb  kaggle_eval_3_hybrid.ipynb  kaggle_ingest_entities_relationships.ipynb  kaggle_ingest_qdrant.ipynb  run_benchmark.ipynb  (+1 more)
(+245 files in other folders)
