[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegishealth-kbqa"
version = "1.0.0"
description = "AegisHealth KBQA — Hybrid GraphRAG Medical QA System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # == Core ==
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",

    # == Neo4j ==
    "neo4j>=5.20.0",

    # == LightRAG ==
    "lightrag-hku>=1.0.0",

    # == AI / ML ==
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",

    # == HTTP ==
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["ai_engine*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["ai_engine/tests", "backend/tests"]
asyncio_mode = "auto"
pythonpath = [".", "backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
